# Thealcohesion-core

./: .env  .gitmodules  ARCHITECTURE.md  README.md  audit.js  auth.js  boot.js  complete-profile.html  db-gateway.js  download.css  download.html  guide.js  index.html  kernel.js  landing.css  landing.js  loading.js  marketplace.js  os-core.js  package-lock.json  package.json  remember.md  style.css  time.js  trialanddelete.js  ui.js  vfs.js  vpu-api.js  vpu-auth.js  vpu-bridge.js  vpu-terminal.js  waiting-approval.html
Sovereign-Browser/: .gitignore  keyboard-policies.js  main.js  package-lock.json  package.json  preload.js
Sovereign-Browser/ui/: kiosk.css  kiosk.html  kiosk.js
Sovereign-Mobile/: capacitor.config.json  package-lock.json
Sovereign-Mobile/www/: entry.js  index.html
Thealcohesion-core/: .gitignore  index.html  landing.css  sw.js
Thealcohesion-core/Docs/: constitution.md  mtaagrid.md
Thealcohesion-core/Sovereign-Browser/: package.json  preload.js
Thealcohesion-core/css/: layout.css  manifest.json  theme.css
Thealcohesion-core/vaultfiles/: investors.txt  shares_registry.json
css/: layout.css  theme.css
css/apps/: browser.css  calender.css  camera.css  terminal.css
js/: landing.html  os.js  registry.js  time.js  values-council.js  vfs.js
kept4later/: index.html  kiosk.js  styles.css  test.html  test2.html
sovereign-shell/: kiosk.html  package-lock.json  package.json
sovereign-shell/src-tauri/: Cargo.toml  tauri.conf.json
sovereign-shell/src-tauri/capabilities/: default.json
sovereign-shell/src-tauri/src/: main.rs
(+141 files in other folders)
