[package]
name = "sovereign-shell"
version = "0.1.0"
description = "A Zero-Lag OS Runtime"
authors = ["you"]
edition = "2021"

[lib]
name = "sovereign_shell_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Core Tauri v2
tauri = { version = "2", features = [] }
# Standard Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Plugins (This is how you access hardware now)
tauri-plugin-shell = "2"   # Replacement for the old shell API
tauri-plugin-opener = "2"  # For opening URLs/Folders
tauri-plugin-os = "2"      # For reading Battery/Hardware
